syntax = "proto3";

option go_package = "github.com/dwaynedwards/sell-u-lar/pkg/proto/products";

package products;

message Product {
  string sku         = 1;
  string title       = 2;
  string brand       = 3;
  string description = 4;
  int32  price       = 5;
  int32  rating      = 6;
  string image_url   = 7;
}

message ProductsRequest {
}

message ProductsBrandRequest {
  string brand = 1;
}

message ProductRequest {
  string brand = 1;
  string sku   = 2;
}

message ProductsResponse {
  repeated Product products = 1;
}

message ProductResponse {
  Product product = 1;
}

service Products {
  rpc ListProducts(ProductsRequest) returns (ProductsResponse) {}
  rpc ListProductsByBrand(ProductsBrandRequest) returns (ProductsResponse) {}
  rpc GetProductByBrandAndSku(ProductRequest) returns (ProductResponse) {}
}